# depgraphv

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  README  README.md  TODO
cmake/: CreateLaunchers.cmake  FindGraphViz.cmake  MUI_EXTRAPAGES.nsh  NSIS.InstallOptions.ini.in  NSIS.template.in  PCH_Support.cmake  buildQt4.cmake  buildQt5.cmake  buildsettings.h.in  cmake_uninstall.cmake.in  functions-qt4.cmake  functions-qt5.cmake  functions.cmake  getDeps.cmake.in  installDeps.cmake.in  pack_deb.cmake  pack_nsis.cmake  pack_rpm.cmake  packaging.cmake
cmake/launcher-templates/: launcher.env.cmd.in  perconfig.vcxproj.user.in  targetlauncher.cmd.in  vcxproj.user.in
cmake/templates/: NSIS.InstallOptions.ini.in  NSIS.template.in  buildsettings.h.in  cmake_uninstall.cmake.in  dep-graphV.desktop.in  installConfig6.cmake.in  installDeps.cmake.in
i18n/: dep-graphV_en_US.ts  dep-graphV_it.ts  dep-graphV_it_IT.ts  dep-graph_en_US.ts  dep-graph_it_IT.ts
res/: about.html  about_it.html  db-structure.sql  dep-graphV.rc  graphAttribs.xml  license-template  resource.h  resources.qrc
src/: .directory  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  appconfig.cpp  appconfig.h  backgroundworker.cpp  backgroundworker.h  binaryradiowidget.cpp  binaryradiowidget.h  checkablefilesystemmodel.cpp  checkablefilesystemmodel.h  comboboxitemdelegate.cpp  comboboxitemdelegate.h  customitemdelegate.cpp  customitemdelegate.h  customtabwidget.cpp  customtabwidget.h  depgraphv_pch.cpp  depgraphv_pch.h  filesmodel.cpp  filesmodel.h  filterpage.cpp  filterpage.h  foldersmodel.cpp  foldersmodel.h  generalpage.cpp  generalpage.h  graph.cpp  graph.h  graphpage.cpp  graphpage.h  handlerootsdialog.cpp  handlerootsdialog.h  helpers.cpp  helpers.h  iserializableobject.h  main.cpp  mainwindow.cpp  mainwindow.h  (+25 more)
ui/: aboutdialog.ui  filterpage.ui  generalpage.ui  graphpage.ui  handlerootsdialog.ui  mainwindow.ui  projectinfodialog.ui  removerootdialog.ui  scandialog.ui  scanmodepage.ui  selectfilesdialog.ui  settingsdialog.ui
